src/com/company/gen/EParser.java
// Generated from C:/Users/Alex/IdeaProjects/untitled/src\E.g4 by ANTLR 4.7
package com.company.gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class EParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, BEGIN=5, END=6, PRINT=7, INT=8, IF=9, 
		ELSE=10, FOR=11, WHILE=12, VECTOR=13, MATRIX=14, RETURN=15, ID=16, NUMBER=17, 
		WS=18, O_BRACKET=19, C_BRACKET=20, O_SQARE_BRACKET=21, C_SQARE_BRACKET=22, 
		O_S_BRACKET=23, C_S_BRACKET=24, COMMA=25, PLUS=26, MINUS=27, MULTIPLY=28, 
		DIVIDE=29, NEGATION=30, EQUAL=31, NON_EQUAL=32, LESS=33, GREATER=34, VECTOR_EXPR=35, 
		MATRIX_EXPR=36;
	public static final int
		RULE_program = 0, RULE_block = 1, RULE_statement = 2, RULE_digit_expression = 3, 
		RULE_expression = 4, RULE_input_signature = 5, RULE_assign_int = 6, RULE_assign_int_by_subprogram = 7, 
		RULE_programm_call = 8, RULE_assign_vec = 9, RULE_assign_vec_by_subprogram = 10, 
		RULE_set_vec_expr = 11, RULE_set_vec_expr_by_mat = 12, RULE_assign_mat = 13, 
		RULE_set_mat = 14, RULE_set_mat_expr = 15, RULE_get_mat_row_by_id = 16, 
		RULE_print_number = 17, RULE_print_id = 18, RULE_print_string = 19, RULE_print_mat_row = 20, 
		RULE_simple_compare = 21, RULE_hard_compare = 22, RULE_else_compare = 23, 
		RULE_while_cicle = 24, RULE_compare = 25, RULE_type = 26, RULE_signature = 27, 
		RULE_subprogram_return = 28, RULE_subprogram_non_return = 29, RULE_block_return = 30, 
		RULE_block_non_return = 31, RULE_global_program = 32;
	public static final String[] ruleNames = {
		"program", "block", "statement", "digit_expression", "expression", "input_signature", 
		"assign_int", "assign_int_by_subprogram", "programm_call", "assign_vec", 
		"assign_vec_by_subprogram", "set_vec_expr", "set_vec_expr_by_mat", "assign_mat", 
		"set_mat", "set_mat_expr", "get_mat_row_by_id", "print_number", "print_id", 
		"print_string", "print_mat_row", "simple_compare", "hard_compare", "else_compare", 
		"while_cicle", "compare", "type", "signature", "subprogram_return", "subprogram_non_return", 
		"block_return", "block_non_return", "global_program"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'main_program'", "'='", "'\"'", "'sub_program'", "'begin'", "'end'", 
		"'print'", "'int'", "'if'", "'else'", "'for'", "'while'", "'vector'", 
		"'matrix'", "'return'", null, null, null, "'('", "')'", "'['", "']'", 
		"'{'", "'}'", "','", "'+'", "'-'", "'*'", "'/'", "'!'", "'=='", "'!='", 
		"'<'", "'>'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, "BEGIN", "END", "PRINT", "INT", "IF", "ELSE", 
		"FOR", "WHILE", "VECTOR", "MATRIX", "RETURN", "ID", "NUMBER", "WS", "O_BRACKET", 
		"C_BRACKET", "O_SQARE_BRACKET", "C_SQARE_BRACKET", "O_S_BRACKET", "C_S_BRACKET", 
		"COMMA", "PLUS", "MINUS", "MULTIPLY", "DIVIDE", "NEGATION", "EQUAL", "NON_EQUAL", 
		"LESS", "GREATER", "VECTOR_EXPR", "MATRIX_EXPR"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "E.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public EParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EVisitor ) return ((EVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			match(T__0);
			setState(67);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public TerminalNode BEGIN() { return getToken(EParser.BEGIN, 0); }
		public TerminalNode END() { return getToken(EParser.END, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EVisitor ) return ((EVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			match(BEGIN);
			setState(71); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(70);
				statement();
				}
				}
				setState(73); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PRINT) | (1L << INT) | (1L << IF) | (1L << WHILE) | (1L << VECTOR) | (1L << MATRIX) | (1L << ID))) != 0) );
			setState(75);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public Assign_intContext assign_int() {
			return getRuleContext(Assign_intContext.class,0);
		}
		public Assign_int_by_subprogramContext assign_int_by_subprogram() {
			return getRuleContext(Assign_int_by_subprogramContext.class,0);
		}
		public Programm_callContext programm_call() {
			return getRuleContext(Programm_callContext.class,0);
		}
		public While_cicleContext while_cicle() {
			return getRuleContext(While_cicleContext.class,0);
		}
		public Assign_vecContext assign_vec() {
			return getRuleContext(Assign_vecContext.class,0);
		}
		public Set_vec_exprContext set_vec_expr() {
			return getRuleContext(Set_vec_exprContext.class,0);
		}
		public Set_vec_expr_by_matContext set_vec_expr_by_mat() {
			return getRuleContext(Set_vec_expr_by_matContext.class,0);
		}
		public Assign_vec_by_subprogramContext assign_vec_by_subprogram() {
			return getRuleContext(Assign_vec_by_subprogramContext.class,0);
		}
		public Assign_matContext assign_mat() {
			return getRuleContext(Assign_matContext.class,0);
		}
		public Set_mat_exprContext set_mat_expr() {
			return getRuleContext(Set_mat_exprContext.class,0);
		}
		public CompareContext compare() {
			return getRuleContext(CompareContext.class,0);
		}
		public Print_idContext print_id() {
			return getRuleContext(Print_idContext.class,0);
		}
		public Print_mat_rowContext print_mat_row() {
			return getRuleContext(Print_mat_rowContext.class,0);
		}
		public Print_stringContext print_string() {
			return getRuleContext(Print_stringContext.class,0);
		}
		public Print_numberContext print_number() {
			return getRuleContext(Print_numberContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EVisitor ) return ((EVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(92);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(77);
				assign_int();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(78);
				assign_int_by_subprogram();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(79);
				programm_call();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(80);
				while_cicle();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(81);
				assign_vec();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(82);
				set_vec_expr();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(83);
				set_vec_expr_by_mat();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(84);
				assign_vec_by_subprogram();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(85);
				assign_mat();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(86);
				set_mat_expr();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(87);
				compare();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(88);
				print_id();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(89);
				print_mat_row();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(90);
				print_string();
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(91);
				print_number();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Digit_expressionContext extends ParserRuleContext {
		public TerminalNode NUMBER() { return getToken(EParser.NUMBER, 0); }
		public TerminalNode ID() { return getToken(EParser.ID, 0); }
		public List<Digit_expressionContext> digit_expression() {
			return getRuleContexts(Digit_expressionContext.class);
		}
		public Digit_expressionContext digit_expression(int i) {
			return getRuleContext(Digit_expressionContext.class,i);
		}
		public TerminalNode MULTIPLY() { return getToken(EParser.MULTIPLY, 0); }
		public TerminalNode DIVIDE() { return getToken(EParser.DIVIDE, 0); }
		public TerminalNode PLUS() { return getToken(EParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(EParser.MINUS, 0); }
		public Digit_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_digit_expression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EVisitor ) return ((EVisitor<? extends T>)visitor).visitDigit_expression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Digit_expressionContext digit_expression() throws RecognitionException {
		return digit_expression(0);
	}

	private Digit_expressionContext digit_expression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Digit_expressionContext _localctx = new Digit_expressionContext(_ctx, _parentState);
		Digit_expressionContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_digit_expression, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NUMBER:
				{
				setState(95);
				match(NUMBER);
				}
				break;
			case ID:
				{
				setState(96);
				match(ID);
				}
				break;
			case O_BRACKET:
				{
				setState(97);
				match(O_BRACKET);
				setState(98);
				digit_expression(0);
				setState(99);
				match(C_BRACKET);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(111);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(109);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
					case 1:
						{
						_localctx = new Digit_expressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_digit_expression);
						setState(103);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(104);
						_la = _input.LA(1);
						if ( !(_la==MULTIPLY || _la==DIVIDE) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(105);
						digit_expression(6);
						}
						break;
					case 2:
						{
						_localctx = new Digit_expressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_digit_expression);
						setState(106);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(107);
						_la = _input.LA(1);
						if ( !(_la==PLUS || _la==MINUS) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(108);
						digit_expression(5);
						}
						break;
					}
					} 
				}
				setState(113);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(EParser.ID, 0); }
		public TerminalNode O_BRACKET() { return getToken(EParser.O_BRACKET, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode C_BRACKET() { return getToken(EParser.C_BRACKET, 0); }
		public TerminalNode MULTIPLY() { return getToken(EParser.MULTIPLY, 0); }
		public TerminalNode PLUS() { return getToken(EParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(EParser.MINUS, 0); }
		public Digit_expressionContext digit_expression() {
			return getRuleContext(Digit_expressionContext.class,0);
		}
		public TerminalNode DIVIDE() { return getToken(EParser.DIVIDE, 0); }
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EVisitor ) return ((EVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		return expression(0);
	}

	private ExpressionContext expression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpressionContext _localctx = new ExpressionContext(_ctx, _parentState);
		ExpressionContext _prevctx = _localctx;
		int _startState = 8;
		enterRecursionRule(_localctx, 8, RULE_expression, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				{
				setState(115);
				match(ID);
				}
				break;
			case O_BRACKET:
				{
				setState(116);
				match(O_BRACKET);
				setState(117);
				expression(0);
				setState(118);
				match(C_BRACKET);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(133);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(131);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
					case 1:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(122);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						{
						setState(123);
						match(MULTIPLY);
						}
						setState(124);
						expression(6);
						}
						break;
					case 2:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(125);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(126);
						_la = _input.LA(1);
						if ( !(_la==PLUS || _la==MINUS) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(127);
						expression(5);
						}
						break;
					case 3:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(128);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(129);
						_la = _input.LA(1);
						if ( !(_la==MULTIPLY || _la==DIVIDE) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(130);
						digit_expression(0);
						}
						break;
					}
					} 
				}
				setState(135);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Input_signatureContext extends ParserRuleContext {
		public TerminalNode O_BRACKET() { return getToken(EParser.O_BRACKET, 0); }
		public TerminalNode C_BRACKET() { return getToken(EParser.C_BRACKET, 0); }
		public List<TerminalNode> ID() { return getTokens(EParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(EParser.ID, i);
		}
		public Input_signatureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_input_signature; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EVisitor ) return ((EVisitor<? extends T>)visitor).visitInput_signature(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Input_signatureContext input_signature() throws RecognitionException {
		Input_signatureContext _localctx = new Input_signatureContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_input_signature);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(136);
			match(O_BRACKET);
			setState(141);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(137);
					match(ID);
					setState(138);
					match(COMMA);
					}
					} 
				}
				setState(143);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			{
			setState(144);
			match(ID);
			}
			setState(145);
			match(C_BRACKET);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Assign_intContext extends ParserRuleContext {
		public List<TerminalNode> INT() { return getTokens(EParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(EParser.INT, i);
		}
		public TerminalNode ID() { return getToken(EParser.ID, 0); }
		public TerminalNode O_BRACKET() { return getToken(EParser.O_BRACKET, 0); }
		public TerminalNode C_BRACKET() { return getToken(EParser.C_BRACKET, 0); }
		public Digit_expressionContext digit_expression() {
			return getRuleContext(Digit_expressionContext.class,0);
		}
		public Assign_intContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign_int; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EVisitor ) return ((EVisitor<? extends T>)visitor).visitAssign_int(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Assign_intContext assign_int() throws RecognitionException {
		Assign_intContext _localctx = new Assign_intContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_assign_int);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
				{
				{
				setState(147);
				match(INT);
				setState(148);
				match(ID);
				setState(149);
				match(T__1);
				{
				setState(150);
				match(O_BRACKET);
				setState(151);
				match(INT);
				setState(152);
				match(C_BRACKET);
				}
				{
				setState(154);
				digit_expression(0);
				}
				}
				}
				break;
			case ID:
				{
				{
				setState(155);
				match(ID);
				setState(156);
				match(T__1);
				{
				setState(157);
				match(O_BRACKET);
				setState(158);
				match(INT);
				setState(159);
				match(C_BRACKET);
				}
				{
				setState(161);
				digit_expression(0);
				}
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Assign_int_by_subprogramContext extends ParserRuleContext {
		public List<TerminalNode> INT() { return getTokens(EParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(EParser.INT, i);
		}
		public List<TerminalNode> ID() { return getTokens(EParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(EParser.ID, i);
		}
		public List<TerminalNode> O_BRACKET() { return getTokens(EParser.O_BRACKET); }
		public TerminalNode O_BRACKET(int i) {
			return getToken(EParser.O_BRACKET, i);
		}
		public List<TerminalNode> C_BRACKET() { return getTokens(EParser.C_BRACKET); }
		public TerminalNode C_BRACKET(int i) {
			return getToken(EParser.C_BRACKET, i);
		}
		public Input_signatureContext input_signature() {
			return getRuleContext(Input_signatureContext.class,0);
		}
		public Assign_int_by_subprogramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign_int_by_subprogram; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EVisitor ) return ((EVisitor<? extends T>)visitor).visitAssign_int_by_subprogram(this);
			else return visitor.visitChildren(this);
		}
	}
